# api-gateway

./: .env.example  .gitignore  Cargo.toml
config/: application-local.yml  application.yml
src/: config.rs  handlers.rs  main.rs  routes.rs
src/handlers/: http_proxy.rs  ws_proxy.rs
