[package]
name = "api-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
tokio = { version = "1.46.1", features = ["full"] }
hyper = { version = "1.6.0", features = ["client"] }
hyper-util = { version = "0.1.16", features = ["full"] }
http-body-util = "0.1"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "fs"] }
once_cell = "1.19"

# 웹소켓
tokio-tungstenite = "0.27.0"
tungstenite = "0.27.0"
futures-util = "0.3"

# 설정 관리
config = "0.15.13" # 환경변수, 파일 등에서 설정 로드
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9" # YAML 파싱용

# 로깅
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 에러
thiserror = "2.0.12"
anyhow = "1.0.98"

# 환경변수
dotenvy = "0.15.7"
regex = "1.11.1"
http = "1.3.1"